# FunASR

./: README.md  download_model.py
funasr/download/: runtime_sdk_download_tool.py
funasr/models/bicif_paraformer/: cif_predictor.py  export_meta.py
funasr/models/sanm/: attention.py
funasr/utils/: export_utils.py
runtime/: log.txt  run_server_gpu.sh
runtime/onnxruntime/: CMakeLists.txt
runtime/onnxruntime/src/: CMakeLists.txt  audio.cpp
runtime/python/websocket/: debug_received_audio.pcm  funasr_wss_client.py  funasr_wss_server.py  local_test.py
runtime/simple_funasr_standalone/: .gitignore  CMakeLists.txt  copy_kaldi.py  fix_includes.py
runtime/simple_funasr_standalone/include/: audio.h  com-define.h  model.h  precomp.h  util.h  vocab.h
runtime/simple_funasr_standalone/src/: audio.cpp  main.cpp  model.cpp  util.cpp  vocab.cpp
runtime/simple_funasr_standalone/src/kaldi-native-fbank/: feature-window.cc  feature-window.h  online-feature.cc  online-feature.h
runtime/websocket/: CMakeLists.txt  log.txt
